--- a/watch/public/css/main.css
+++ b/watch/public/css/main.css
@@ -1,35 +1,35 @@
 /* Bootstrap Modifications */
 
-    .container {
-        max-width: 960px;
-    }
+.container {
+    max-width: 960px;
+}
 
 /* Navigation */
-    
-    /* Most of the themes are bootstraped */
 
-    .navbar {
-        /* Has Bootstrap Themes */
-        background-color: white;
-    }
+/* Most of the themes are bootstraped */
+
+.navbar {
+    /* Has Bootstrap Themes */
+    background-color: white;
+}
 
 
 /* General Styles */
 
-    .spacebar {
-        height: 100px;
-    }
+.spacebar {
+    height: 100px;
+}
 
-    .image {
-        width: 100%;
-    }
+.image {
+    width: 100%;
+}
 
 /* Hero */
 
-    #hero_img {
-        position: relative;
-        left: -145%;
-    }
+#hero_img {
+    position: relative;
+    left: -145%;
+}
 
 /* Latest Updates */
 
@@ -37,43 +37,49 @@
 
 /* Form */
 
-    input[type=text] {
-        background-color: #EAEAEA;
-        border-color: #EAEAEA;
-        border-radius: 10px;
-        width: 75%;
+input[type=text] {
+    background-color: #EAEAEA;
+    border-color: #EAEAEA;
+    border-radius: 10px;
+    width: 75%;
 
-    }
+}
 
-    input[type=email] {
-        background-color: #EAEAEA;
-        border-color: #EAEAEA;
-        border-radius: 10px;
-        width: 75%;
-    }
+input[type=email] {
+    background-color: #EAEAEA;
+    border-color: #EAEAEA;
+    border-radius: 10px;
+    width: 75%;
+}
 
-    textarea {
-        resize: none;
-    }
+textarea {
+    resize: none;
+}
 
-    #message {
-        height: 215px;
-        background-color: #EAEAEA;
-        border-color: #EAEAEA;
-        border-radius: 10px;
-    }
+#message {
+    height: 215px;
+    background-color: #EAEAEA;
+    border-color: #EAEAEA;
+    border-radius: 10px;
+}
 
-    #message:focus {
-        background-color: white;
-    }
+#message:focus {
+    background-color: white;
+}
 
-    #btn-contact {
-        background-color: #C4C4C4;
-        border-color: #C4C4C4;
-        border-radius: 10px;
-        transition-duration: 0.1s;
-    }
+#btn-contact {
+    background-color: #C4C4C4;
+    border-color: #C4C4C4;
+    border-radius: 10px;
+    transition-duration: 0.1s;
+}
 
-    #btn-contact:hover {
-        background-color: white;
-    }
+#btn-contact:hover {
+    background-color: white;
+}
+
+#response-contact {
+    width: 20px;
+    height: 20px;
+    pointer-events: none
+}
