--- a/watch/public/css/main.css
+++ b/watch/public/css/main.css
@@ -80,14 +80,14 @@ textarea {
     background-color: white;
 }
 
-#btn-contact {
+.btn-action {
     background-color: #C4C4C4;
     border-color: #C4C4C4;
     border-radius: 10px;
     transition-duration: 0.1s;
 }
 
-#btn-contact:hover {
+.btn-action:hover {
     background-color: white;
 }
 
