--- a/watch/public/css/main.css
+++ b/watch/public/css/main.css
@@ -91,7 +91,7 @@ textarea {
     background-color: white;
 }
 
-#response-contact {
+#response-contact, #response-tweets {
     width: 20px;
     height: 20px;
     pointer-events: none
