--- a/watch/public/css/footer.css
+++ b/watch/public/css/footer.css
@@ -1,17 +1,6 @@
-.footer {
-    /* position: absolute; */
-    bottom: 0;
-    width: 100%;
-
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    
-    line-height: 60px; /* Vertically center the text there */
-    
-    background-color: #f5f5f5;
-}
+#footer { background-color: #f5f5f5; }
 
 .footer-sm {
     width: 25px;
-    margin-right: 25px;
+    margin: 0px 15px;
 }
