--- a/watch/public/css/nav.css
+++ b/watch/public/css/nav.css
@@ -1,26 +1,14 @@
-
 /* Navigation */
 
-/* Most of the themes are bootstraped */
-
-.navbar {
-    /* Has Bootstrap Themes */
-    background-color: white;
-}
+/* Without this the background would be transparent */
+.navbar { background: white; }
 
 .nav-link {
     margin: 10px;
     padding: 5px;
-    color: black;
     text-decoration: none;
     border-bottom: 3px solid transparent;
-} .nav-link:hover {
-    color: black;
-    border-bottom: 3px solid rgba(241, 91, 36, 0.5);
-}
+} .nav-link:hover { border-bottom: 3px solid rgba(241, 91, 36, 0.5); }
 
-.nav-active {
-    border-bottom: 3px solid #F15A24;
-} .nav-active:hover {
-    border-bottom: 3px solid #F15A24;
-}
+/* Default width: 100%; takes up the whole navbar */
+.navbar-brand > img { width: 50px; }
